--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,47 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.logo_brand {
+  width: 100px;
+  height: 100px;
+}
+
+.header_container {
+  background-color: #913b54;
+}
+
+.header_container h1 {
+  font-family: 'Shalimar', cursive;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.navbar_header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar_info {
+  margin-left: 20px;
+}
+
+.navbar_info h1 {
+  font-size: 50px;
+}
+
+.info_box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
